Fix alignment issue with win bars on community page

--- a/app/assets/stylesheets/community.scss
+++ b/app/assets/stylesheets/community.scss
@@ -1,5 +1,5 @@
 .win-bar-container {
-  width: 27%;
+  width: 23%;
   height: 15px;
 }
 
